--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
           <h2 hidden>Our benefits</h2>
           <ul class="list flex-ben">
             <li class="benefits-item">
+              <div class="benefits-svg">
+                <svg class="svg-item">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list">Strategy</h3>
               <p class="benefits-text">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +84,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-svg">
+                <svg class="svg-item">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list">Punctuality</h3>
               <p class="benefits-text">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +96,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-svg">
+                <svg class="svg-item">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list">Diligence</h3>
               <p class="benefits-text">
                 Research and confirm brands that present the strongest digital
@@ -94,6 +109,11 @@
             </li>
 
             <li class="benefits-item">
+              <div class="benefits-svg">
+                <svg class="svg-item">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list">Technologies</h3>
               <p class="benefits-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -151,6 +171,44 @@
               <div class="team-item">
                 <h3 class="team-hero">Mark Guerrero</h3>
                 <p class="hero-text">Product Designer</p>
+                <ul class="list contacts">
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter "
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook "
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin "
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -165,6 +223,44 @@
               <div class="team-item">
                 <h3 class="team-hero">Tom Ford</h3>
                 <p class="hero-text">Frontend Developer</p>
+                <ul class="list contacts">
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter "
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook "
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin "
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-section">
@@ -178,6 +274,44 @@
               <div class="team-item">
                 <h3 class="team-hero">Camila Garcia</h3>
                 <p class="hero-text">Marketing</p>
+                <ul class="list contacts">
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter "
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook "
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin "
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-section">
@@ -191,7 +325,95 @@
               <div class="team-item">
                 <h3 class="team-hero">Daniel Wilson</h3>
                 <p class="hero-text">UI Designer</p>
+                <ul class="list contacts">
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter "
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook "
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="contacs-stail">
+                      <svg class="contacts-item">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin "
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!---------------------------Customers------------------------>
+      <section class="customers">
+        <div class="conteiner">
+          <h2 class="customers-titel">Customers</h2>
+          <ul class="list customers-list">
+            <li class="customers-item">
+              <a href="" class="customers-stail">
+                <svg class="customers-svg">
+                  <use href="./images/symbol-defs.svg#icon-Logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-stail">
+                <svg class="customers-svg">
+                  <use href="./images/symbol-defs.svg#icon-Logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-stail">
+                <svg class="customers-svg">
+                  <use href="./images/symbol-defs.svg#icon-Logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-stail">
+                <svg class="customers-svg">
+                  <use href="./images/symbol-defs.svg#icon-Logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-stail">
+                <svg class="customers-svg">
+                  <use href="./images/symbol-defs.svg#icon-Logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-stail">
+                <svg class="customers-svg">
+                  <use href="./images/symbol-defs.svg#icon-Logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -208,6 +430,39 @@
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
+        </div>
+        <div class="media">
+          <h2 class="media-titel">Social media</h2>
+          <ul class="list contacts-footer">
+            <li>
+              <a href="" class="contacs-footer-stail">
+                <svg class="contacts-footer-item">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="contacs-footer-stail">
+                <svg class="contacts-footer-item">
+                  <use href="./images/symbol-defs.svg#icon-twitter "></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="contacs-footer-stail">
+                <svg class="contacts-footer-item">
+                  <use href="./images/symbol-defs.svg#icon-facebook "></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="contacs-footer-stail">
+                <svg class="contacts-footer-item">
+                  <use href="./images/symbol-defs.svg#icon-linkedin "></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
