--- a/portfolio.html
+++ b/portfolio.html
@@ -246,6 +246,39 @@
             digital marketing & growth solutions.
           </p>
         </div>
+        <div class="media">
+          <h2 class="media-titel">Social media</h2>
+          <ul class="list contacts-footer">
+            <li>
+              <a href="" class="contacs-footer-stail">
+                <svg class="contacts-footer-item">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="contacs-footer-stail">
+                <svg class="contacts-footer-item">
+                  <use href="./images/symbol-defs.svg#icon-twitter "></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="contacs-footer-stail">
+                <svg class="contacts-footer-item">
+                  <use href="./images/symbol-defs.svg#icon-facebook "></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="contacs-footer-stail">
+                <svg class="contacts-footer-item">
+                  <use href="./images/symbol-defs.svg#icon-linkedin "></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
